fixed overlow issue (horizontal scroll bar)

--- a/css/custom.css
+++ b/css/custom.css
@@ -1,3 +1,6 @@
+body{
+  overflow-x:hidden;
+}
 .site-header {/* header.html */
     border-top: 8px solid orange;
 }
